@@ -1,0 +1,24 @@
+# Generated by roxygen2 (4.0.2): do not edit by hand
+
+S3method(as.data.frame,phylo)
+S3method(fortify,phylo)
+export(geom_aline)
+export(geom_tiplab)
+export(geom_tippoint)
+export(geom_tree)
+export(ggtree)
+export(theme_blank)
+importFrom(ggplot2,"%+replace%")
+importFrom(ggplot2,aes)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,fortify)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_segment)
+importFrom(ggplot2,geom_text)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
+importFrom(magrittr,"%>%")
+importFrom(magrittr,equals)
