@@ -1,0 +1,22 @@
+% Generated by roxygen2 (4.0.2): do not edit by hand
+\name{as.data.frame.phylo}
+\alias{as.data.frame.phylo}
+\title{as.data.frame}
+\usage{
+\method{as.data.frame}{phylo}(x, ...)
+}
+\arguments{
+\item{x}{phylo object}
+
+\item{...}{additional parameter}
+}
+\value{
+data.frame
+}
+\description{
+as.data.frame
+}
+\author{
+Yu Guangchuang
+}
+
