@@ -1,0 +1,26 @@
+% Generated by roxygen2 (4.0.2): do not edit by hand
+\name{geom_tiplab}
+\alias{geom_tiplab}
+\title{geom_tiplab}
+\usage{
+geom_tiplab(align = FALSE, hjust = -0.25, size = 5, ...)
+}
+\arguments{
+\item{align}{align tip lab or not, logical}
+
+\item{hjust}{horizontal adjustment}
+
+\item{size}{label size}
+
+\item{...}{additional parameter}
+}
+\value{
+tip label layer
+}
+\description{
+add tip label layer
+}
+\author{
+Yu Guangchuang
+}
+
