@@ -1,0 +1,20 @@
+% Generated by roxygen2 (4.0.2): do not edit by hand
+\name{geom_tippoint}
+\alias{geom_tippoint}
+\title{geom_tippoint}
+\usage{
+geom_tippoint(...)
+}
+\arguments{
+\item{...}{additional parameter}
+}
+\value{
+tip point layer
+}
+\description{
+add points layer of tips
+}
+\author{
+Yu Guangchuang
+}
+
