@@ -1,0 +1,20 @@
+% Generated by roxygen2 (4.0.2): do not edit by hand
+\name{geom_tree}
+\alias{geom_tree}
+\title{geom_tree}
+\usage{
+geom_tree(...)
+}
+\arguments{
+\item{...}{additional parameter}
+}
+\value{
+tree layer
+}
+\description{
+add tree layer
+}
+\author{
+Yu Guangchuang
+}
+
