@@ -1,0 +1,22 @@
+% Generated by roxygen2 (4.0.2): do not edit by hand
+\name{ggtree}
+\alias{ggtree}
+\title{ggtree}
+\usage{
+ggtree(tr, ...)
+}
+\arguments{
+\item{tr}{phylo object}
+
+\item{...}{additional parameter}
+}
+\value{
+tree
+}
+\description{
+drawing phylogenetic tree from phylo object
+}
+\author{
+Yu Guangchuang
+}
+
