@@ -1,0 +1,14 @@
+% Generated by roxygen2 (4.0.2): do not edit by hand
+\name{theme_blank}
+\alias{theme_blank}
+\title{theme_blank}
+\usage{
+theme_blank()
+}
+\description{
+blank theme
+}
+\author{
+Yu Guangchuang
+}
+
